:scroll: Codeblock Line Numbers: Fix language selector being cropped

--- a/public/scrolls/codeblock-line-numbers/config.css
+++ b/public/scrolls/codeblock-line-numbers/config.css
@@ -2,4 +2,5 @@
   --line-number-width: 45px;
   --line-number-color: black;
   --line-number-background-color: rgba(0, 0, 0, 0.04);
+  --code-node-border-radius: 7px;
 }
